syntax = "proto3";

package api.simulation;

option go_package="github.com/synerex/synerex_alpha/api/simulation";

import "simulation/agent/agent.proto";
import "simulation/clock/clock.proto";
import "simulation/provider/provider.proto";

message SimDemand {
		uint64 pid = 1;
        // provider info
        DemandType type = 2;

        // meta data
        StatusType status = 3;
	    string meta = 4;

		// demand data
        oneof data {
			agent.SetAgentsRequest set_agents_request = 5;
			agent.GetAgentsRequest get_agents_request = 6;
			provider.RegistProviderRequest regist_provider_request = 7;
			provider.KillProviderRequest kill_provider_request = 8;
			provider.DivideProviderRequest divide_provider_request = 9;
			provider.UpdateProvidersRequest update_providers_request = 10;
			provider.SendProviderStatusRequest send_provider_status_request = 11;
			clock.GetClockRequest get_clock_request = 12;
			clock.SetClockRequest set_clock_request = 13;
			clock.UpdateClockRequest update_clock_request = 14;
			clock.StartClockRequest start_clock_request = 15;
			clock.StopClockRequest stop_clock_request = 16;
			clock.ForwardClockRequest forward_clock_request = 17;
			clock.BackClockRequest back_clock_request = 18;
        }
    }

 message SimSupply {
	 	uint64 pid = 1;
        // demand type
        SupplyType type = 2;

        // meta data
        StatusType status = 3;
        string meta = 4;

		// supply data
        oneof data {
			agent.SetAgentsResponse set_agents_response = 5;
			agent.GetAgentsResponse get_agents_response = 6;
			provider.RegistProviderResponse regist_provider_response = 7;
			provider.KillProviderResponse kill_provider_response = 8;
			provider.DivideProviderResponse divide_provider_response = 9;
			provider.UpdateProvidersResponse update_providers_response = 10;
			provider.SendProviderStatusResponse send_provider_status_response = 11;
			clock.GetClockResponse get_clock_response = 12;
			clock.SetClockResponse set_clock_response = 13;
			clock.UpdateClockResponse update_clock_response = 14;
			clock.StartClockResponse start_clock_response = 15;
			clock.StopClockResponse stop_clock_response = 16;
			clock.ForwardClockResponse forward_clock_response = 17;
			clock.BackClockResponse back_clock_response = 18;
        }
    }

enum StatusType {
    OK = 0;
    NG = 1;
    NONE = 2;
}

enum DemandType {
    GET_AGENTS_REQUEST = 0;
    SET_AGENTS_REQUEST = 1;
	REGIST_PROVIDER_REQUEST = 2;
	KILL_PROVIDER_REQUEST = 3;
	DIVIDE_PROVIDER_REQUEST = 4;
	UPDATE_PROVIDERS_REQUEST = 5;
	SEND_PROVIDER_STATUS_REQUEST = 6;
	GET_CLOCK_REQUEST = 7;
	SET_CLOCK_REQUEST = 8;
	UPDATE_CLOCK_REQUEST = 9;
	START_CLOCK_REQUEST = 10;
	STOP_CLOCK_REQUEST = 11;
	FORWARD_CLOCK_REQUEST = 12;
	BACK_CLOCK_REQUEST = 13;
}

enum SupplyType {
    GET_AGENTS_RESPONSE = 0;
    SET_AGENTS_RESPONSE = 1;
	REGIST_PROVIDER_RESPONSE = 2;
	KILL_PROVIDER_RESPONSE = 3;
	DIVIDE_PROVIDER_RESPONSE = 4;
	UPDATE_PROVIDERS_RESPONSE = 5;
	SEND_PROVIDER_STATUS_RESPONSE = 6;
	GET_CLOCK_RESPONSE = 7;
	SET_CLOCK_RESPONSE = 8;
	UPDATE_CLOCK_RESPONSE = 9;
	START_CLOCK_RESPONSE = 10;
	STOP_CLOCK_RESPONSE = 11;
	FORWARD_CLOCK_RESPONSE = 12;
	BACK_CLOCK_RESPONSE = 13;
}


